k8s/hello-world-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-server
  labels:
    app: hello-world-server
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-server
      version: v1
  template:
    metadata:
      labels:
        app: hello-world-server
        version: v1
    spec:
      containers:
      - name: webserver
        image: tjandy/hello-world-server
        ports:
        - containerPort: 8008
