k8s/ hello-world-server-gateway-2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-world-server-gateway-2
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 15443
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world-server-2
spec:
  hosts:
  - "*"
  gateways:
  -  hello-world-server-gateway-2
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: hello-world-server-service
        port:
          number: 8008
  - match:
    - uri:
        exact: /mars
    route:
    - destination:
        host: hello-world-server-service
        port:
          number: 8008
